# moid

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  homebrew.yml  release.yml
moid/: Cargo.toml  README.md
moid-cli/: Cargo.toml  README.md
moid-cli/src/: main.rs
moid/src/: alphabet.rs  error.rs  lib.rs  minter.rs  presets.rs  rng.rs
moid/tests/: reconstruct.rs
