[package]
name = "moid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
description = "Minimal opaque ID minter: random, optionally check-digited identifiers over a configurable alphabet, with a NOID-style check character. Mint-only — binding and resolution are deliberately out of scope."
keywords = ["noid", "ark", "identifier", "check-digit", "opaque-id"]
categories = ["algorithms", "value-formatting"]

# The core is intentionally dependency-free so it links into WASM, Extism
# guests, and native targets alike, with entropy supplied by the caller. The
# only optional dependency is `getrandom`, gated behind the `os`/`js` features
# for the convenience of callers that *do* have ambient entropy.
[dependencies]
getrandom = { version = "0.2", optional = true }

[features]
default = []
# Ambient OS / WASI entropy (native + server). Enables `Minter::mint_os`.
#
# Deliberately `["getrandom"]`, not `["dep:getrandom"]`: the latter (hiding the
# implicit feature) trips a Cargo resolver bug on our MSRV (1.70) whenever an
# optional dep is *also* referenced via `dep/feature` syntax elsewhere (here,
# `getrandom/js` below) — cargo errors with "does not have feature `getrandom`"
# even on a plain `cargo check`, before any feature is even activated. Fixed
# upstream by Cargo 1.75; since we still claim 1.70, we eat the minor cost of
# `getrandom` also being directly enable-able as its own (redundant, harmless)
# public feature name.
os = ["getrandom"]
# Browser wasm32-unknown-unknown entropy (implies `os`).
js = ["os", "getrandom/js"]
